# spiders

./: .gitignore  .gitmodules  Cargo.toml  README.md  changelog.org  notes.org  todo.org
.cargo/: config.toml
pieces/bailor/: Cargo.toml  README.md
pieces/entity/: Cargo.toml  README.md  schema.sh  schema.toasty
pieces/entity/src/: lib.rs
pieces/entity/src/db/: mod.rs  utensil.rs
pieces/entity/src/seaorm/: mod.rs  snooper.rs  toolkit.rs  utensil.rs
pieces/entity/src/toasty/: snooper.rs  toolkit.rs
pieces/scheme/: Cargo.toml  build.rs
pieces/scheme/proto/: object.proto  server.proto
pieces/scheme/src/: lib.rs  proto.rs
pieces/scheme/src/entity/: utensil.rs
pieces/scheme/src/scheme/: scheme.proto
pieces/spawner/utils/: greeter.proto
pieces/spiders-bailor/: Cargo.toml
pieces/spiders-scheme/: Cargo.toml
pieces/spiders-scheme/src/: entity.rs  lib.rs  scheme.rs  snooper.rs  toolkit.rs
pieces/spiders-scheme/src/entity/: caliber.rs  snooper.rs  toolkit.rs  utensil.rs
pieces/spiders-scheme/src/scheme/: scheme.proto
pieces/veneer/: Cargo.toml
pieces/widget/: Cargo.toml  README.md
pieces/widget/src/: lib.rs
recipe/: demo.ron
scenes/browser/: Cargo.toml  Trunk.toml
scenes/dossier/: Cargo.toml  build.rs
scenes/dossier/assets/: index.html
scenes/dossier/src/: app.rs  fallback.rs  innate.rs  lib.rs  main.rs  server.rs
scenes/dossier/src/data/: fluid.rs  mod.rs  solid.rs
scenes/dossier/src/page/: mod.rs  snooper.rs  toolkit.rs
scenes/dossier/utils/: greeter.proto
scenes/snooper/: Cargo.toml  build.rs
scenes/snooper/src/: main.rs
scenes/snooper/utils/: greeter.proto
scenes/spawner/: Cargo.toml
scenes/spawner/src/: main.rs
scenes/spiders-dossier/: Cargo.toml
scenes/spiders-dossier/src/: main.rs
scenes/spiders-dossier/utils/: greeter.proto  innate.json
scenes/spiders-snooper/: Cargo.toml  build.rs
scenes/spiders-snooper/src/: main.rs
scenes/spiders-snooper/utils/: greeter.proto  innate.json  operate.proto  snooper.json
scenes/spiders-spawner/config/: fluid.json
scenes/spiders-spawner/src/: main.rs
scenes/spiders-spawner/utils/: innate.json
scenes/spiders-visitor/: Cargo.toml  Trunk.toml  index.html
scenes/spiders-visitor/.cargo/: config.toml
scenes/spiders-visitor/src/: app.rs  main.rs  node.rs
scenes/spiders-visitor/src-tauri/: Cargo.toml  tauri.conf.json
scenes/visitor/: Cargo.toml
scenes/visitor/src/: book.rs  main.rs  node.rs
scenes/visitor/src/global/: mod.rs
spiders-browser/: index.html
spiders-browser/src-tauri/src/: main.rs
spiders-dossier/: Cargo.toml
spiders-dossier/assets/: origin.html
spiders-dossier/src/: app.rs  lib.rs  main.rs
spiders-dossier/src/data/: mod.rs
spiders-dossier/src/page/: snooper.rs  toolkit.rs
spiders-dossier/utils/: orm.json
spiders-snooper/: Cargo.toml
spiders-snooper/src/: main.rs
spiders-spawner/: Cargo.toml
spiders-spawner/config/: solid.json
spiders-spawner/src/: main.rs
spiders-visitor/: .gitignore  Cargo.toml
spiders-visitor/src/: app.rs  main.rs  ui.rs
spiders-visitor/src-tauri/: Cargo.toml  tauri.conf.json
spiders-visitor/src/global/: event.rs  mod.rs
tools/fitter/: .gitignore  README.md  config.toml  fitter.sh  init.el  ubuntu.sources
tools/fitter/config/: rust_config.toml
tools/fitter/config/helix/: config.toml
tools/fitter/config/yazi/: theme.toml  yazi.toml
tools/fitter/config/zellij/: config.kdl
