[workspace]
members = [
    # "pieces/entity",
    # "pieces/scheme",
    # "pieces/widget",
    # "pieces/bailor",
    # "scenes/spawner",
    # "scenes/browser",
    "scenes/dossier",
    "scenes/snooper",
    # "scenes/visitor",
    "basanos/catcher",
]

[package]
name = "spiders"
version = "0.0.1"
description = "A embedded framework tribe use rust"
edition.workspace = true
license.workspace = true
authors.workspace = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Bronze Wang<cuprumwz@foxmail.com>"]

[workspace.dependencies]
tribers = { version = "0" }

# spiders-scheme = { path = "./pieces/scheme" }
# spiders-entity = { path = "./pieces/entity" }
# spiders-widget = { path = "./pieces/widget" }
# spiders-bailor = { path = "./pieces/bailor" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }

tarpc = { version = "0.37", features = ["full"] }

anyhow = { version = "1" }

futures = { version = "0.3" }
futures-util = { version = "0.3" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-opentelemetry = { version = "0.32" }

console-subscriber = { version = "0.5" }

opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.31" }
opentelemetry-appender-tracing = { version = "0.31" }
# opentelemetry-semantic-conventions = { version = "0.31", features = [
#     "semconv_experimental",
# ] }

opentelemetry-system-metrics = { version = "0.31" }

uuid = "1"

# ratatui = "0.29"
# # crossterm = "0.29"
# crossterm = "0.28"
# tui-tree-widget = "0.23"

# rat-salsa = "2"
# rat-dialog = "0.4"
# rat-widget = "1.1"
# rat-theme2 = "1.1"

# eyre = "0.6.8"

# axum = { version = "0.8" }

# cfg-if = { version = "1" }

# console = { version = "0.15" }
# tracing = { version = "0.1" }
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tracing-opentelemetry = { version = "0.24" }
# log = { version = "0.4" }

# opentelemetry = { version = "0.30", features = ["metrics"] }
# opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
# opentelemetry-stdout = { version = "0.30", features = ["metrics", "metrics"] }
# opentelemetry-appender-log = { version = "0.30", default-features = false }
# opentelemetry-prometheus = { version = "0.29" }
# prometheus = { version = "0.14" }

# clap = { version = "4", features = ["derive", "env"] }

# serde = { version = "1" }
# serde_json = { version = "1" }

# http = { version = "1.0"}
# hyper = { version = "1.0", features = ["full"] }
# tower = { version = "0.5", features = ["full"] }
# tower-http = { version = "0.6", features = ["full"] }

# nusb = { version = "0.2" }

# # sqlx = { version = "0.8", features = ["sqlite", "time", "runtime-tokio"] }
# # sea-orm = { version = "1" }

# udev = { version = "0.9" }
# tokio-udev = { version = "0.9" }

# serialport = { version = "4" }
# tokio-serial = { version = "5" }

# prost = { version = "0.14" }
# prost-types = { version = "0.14" }
# tonic = { version = "0.14" }
# tonic-prost = { version = "0.14" }

# prost-build = { version = "0.14" }
# tonic-build = { version = "0.14" }
# tonic-prost-build = { version = "0.14" }

# thiserror = { version = "1" }
# lazy_static = { version = "1" }
