[package]
name = "spiders-dossier"
version = "0.0.0"
description = "dossier menages for tribers isntance named spiders"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# crate-type = ["cdylib", "rlib" ]

[dependencies]
tribers = { workspace = true, optional = true }

spiders-entity = { workspace = true, optional = true }
spiders-scheme = { workspace = true, optional = true }
# spiders-widget = { workspace = true }
# spiders-bailor = { workspace = true, optional = true }

# leptos = { workspace = true }
# leptos_meta = { workspace = true }
# leptos_router = { workspace = true }

# leptos_axum = { workspace = true, optional = true }

# leptos-use = { workspace = true }
# leptos-struct-table = { workspace = true }
# thaw = { workspace = true }
# charming = { workspace = true }

# axum = { workspace = true, optional = true }
# cfg-if = { workspace = true }
# console_error_panic_hook = { workspace = true }
# console_log = { workspace = true }
# http = { workspace = true }
# log = { workspace = true }
# simple_logger = { workspace = true }
# tokio = { workspace = true, optional = true, features = ["full"] }
# tower = { workspace = true, optional = true, features = ["full"] }
# tower-http = { workspace = true, optional = true, features = ["full"] }
# wasm-bindgen = { workspace = true }

# anyhow = { workspace = true }
# thiserror = { workspace = true }
# # lazy_static = { worksapce = true }

# futures = { workspace = true }
# futures-util = { workspace = true }

# # console = { version = "0.15" }
# tracing = { workspace = true, optional = true }
# tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
# tracing-opentelemetry = { workspace = true, optional = true }

# opentelemetry = { version = "0.23", features = ["metrics"] }
# opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio"] }
# opentelemetry-stdout = { version = "0.4", features = ["metrics", "metrics"] }
# opentelemetry-appender-log = { version = "0.4", default-features = false }
# opentelemetry-prometheus = { version = "0.16" }
# prometheus = { version = "0.13" }

# clap = { workspace = true }

# serde = { version = "1" }
# serde_json = { version = "1.0" }

# # serde = { worksapce = true }
# # serde_json = { workspace = true }

# hyper = { workspace = true, optional = true, features = ["full"] }

# nusb = { workspace = true, optional = true }

# sqlx = { workspace = true, optional = true, features = ["sqlite", "time", "runtime-tokio"] }
# sea-orm = { workspace = true, optional = true }

# udev = { workspace = true, optional = true }
# tokio-udev = { workspace = true, optional = true }

# serialport = { workspace = true, optional = true }
# tokio-serial = { workspace = true, optional = true }

# # rumqttc = { version = "0.24" }

# tonic = { workspace = true, optional = true }
# # prost = { workspace = true, optional = true }
# # prost-types = { workspace = true, optional = true }

# [build-dependencies]
# tonic-build = { workspace = true, optional = true }
# # prost-build = { workspace = true, optional = true }

[features]
