[package]
name = "spiders-snooper"
version = "0.1.0"
description = "menage snooper for tribers instance named spiders"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tribers = { version = "0" }

spiders-scheme = { workspace = true }
# spiders-entity = { workspace = true }
# spiders-widget = { workspace = true }
# spiders-bailor = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }

eyre = { workspace = true }
dora-node-api = { workspace = true }
dora-operator-api = { workspace = true }

axum = { workspace = true }

cfg-if = { workspace = true }

http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }

anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

futures = { workspace = true }
futures-util = { workspace = true }

# console = { version = "0.15" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = { workspace = true }
log = { workspace = true }

opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { workspace = true, features = ["metrics", "metrics"] }
opentelemetry-appender-log = { workspace = true, default-features = false }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

clap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

hyper = { workspace = true, features = ["full"] }

nusb = { workspace = true }

sqlx = { workspace = true, features = ["sqlite", "time", "runtime-tokio"] }
sea-orm = { workspace = true }

udev = { workspace = true }
tokio-udev = { workspace = true }

serialport = { workspace = true }
tokio-serial = { workspace = true }

tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
# prost-build = { workspace = true }

