[package]
name = "spiders-spawner"
version = "0.1.0"
edition = "2021"

[dependencies]
tribers = { version = "0" }

futures = { version = "0.3" }
async-trait = { version = "0.1.74" }

serde = { version = "1" }
serde_json = { version = "1.0" }

tokio = { version = "1", features = ["full"] }
console = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["metrics"] }

clap = { version = "4", features = ["derive", "env"] }
