[package]
name = "spiders-entity"
version = "0.0.0"
description = "Spiders bailor for python"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tribers = { workspace = true }

anyhow = { workspace = true }
thiserror  = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sqlx = { version = "0.8", optional = true, features = ["sqlite", "time", "runtime-tokio"] }
sea-orm = { version = "1", optional = true }
sea-query = { version = "1.0.0-rc.12", optional = true, default-features = false, features = ["thread-safe", "hashable-value", "backend-mysql", "backend-postgres", "backend-sqlite"] }

# toasty = { git = "https://github.com/tokio-rs/toasty.git", optional = true }
# toasty-sqlite = { git = "https://github.com/tokio-rs/toasty.git", optional = true }

[features]
default = ["seaorm"]
seaorm = ["dep:sea-orm", "dep:sea-query", "dep:sqlx"]
# toasty = ["dep:toasty", "dep:toasty-sqlite"]
toasty = []
