[package]
name = "spiders-scheme"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Spiders seaorm model"

[dependencies]
tribers = { version = "0" }

anyhow = { version = "1" }
thiserror  = { version = "1" }

serde = { version = "1" }
serde_json = { version = "1" }

tonic = { version = "0.12" }
prost = { version = "0.12" }
prost-types = { version = "0.12" }

[build-dependencies]
tonic-build = { version = "0.12" }
prost-build = { version = "0.12" }
