[package]
name = "spiders-scheme"
version = "0.0.0"
description = "Spiders seaorm model"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tribers = { version = "0" }

# anyhow = { version = "1" }
# thiserror  = { version = "1" }

# serde = { version = "1" }
# serde_json = { version = "1" }

prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
