[package]
name = "spiders-widget"
version = "0.0.0"
description = "Spiders leptos widget"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tribers = { workspace = true, optional = true }

leptos-use = { workspace = true }
leptos-struct-table = { workspace = true }
thaw = { workspace = true }

tokio = { workspace = true, features = ["full"] }

anyhow = { workspace = true }
thiserror = { workspace = true }
# lazy_static = { worksapce = true }

futures = { workspace = true }
futures-util = { workspace = true }
