[package]
name = "spiders-dossier"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com"]
description = "dossier menages for tribers isntance named spiders"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib" ]

[dependencies]
tribers = { workspace = true, optional = true }

# spiders-scheme = { version = "0", path = "../../pieces/spiders-scheme" }

leptos = { workspace = true, features = ["nightly"] }
leptos_meta = { workspace = true, features = ["nightly"] }
leptos_router = { workspace = true, features = ["nightly"] }

leptos_axum = { workspace = true, optional = true }

leptos-use = { workspace = true }
leptos-chartistry = { workspace = true }
leptos-struct-table = { workspace = true }
leptonic = { workspace = true, features = ["nightly"] }

axum = { workspace = true, optional = true }
cfg-if = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
http = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower = { workspace = true, optional = true, features = ["full"] }
tower-http = { workspace = true, optional = true, features = ["full"] }
wasm-bindgen = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { worksapce = true }

futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# console = { version = "0.15" }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
tracing-opentelemetry = { workspace = true, optional = true }

opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.4", features = ["metrics", "metrics"] }
opentelemetry-appender-log = { version = "0.4", default-features = false }
opentelemetry-prometheus = { version = "0.16" }
prometheus = { version = "0.13" }

clap = { workspace = true }

serde = { version = "1" }
serde_json = { version = "1.0" }

# serde = { worksapce = true }
# serde_json = { workspace = true }

hyper = { workspace = true, optional = true, features = ["full"] }

nusb = { workspace = true, optional = true }

sqlx = { workspace = true, optional = true, features = ["sqlite", "time", "runtime-tokio"] }
sea-orm = { workspace = true, optional = true }

udev = { workspace = true, optional = true }
tokio-udev = { workspace = true, optional = true }

serialport = { workspace = true, optional = true }
tokio-serial = { workspace = true, optional = true }

# rumqttc = { version = "0.24" }

tonic = { workspace = true, optional = true }
# prost = { workspace = true, optional = true }
# prost-types = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
# prost-build = { workspace = true, optional = true }

[features]
default = [ "ssr" ]

hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
    "dep:sqlx",
    "dep:sea-orm",
    "dep:nusb",
    "dep:udev",
    "dep:tokio-udev",
    "dep:serialport",
    "dep:tokio-serial",
    "dep:hyper",
    "dep:tonic",
    "dep:tonic-build"
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "spiders-dossier"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:29000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
# end2end-cmd = "npx playwright test"
# end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
