[package]
name = "spiders-dossier"
version = "0.0.1"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com"]
description = "dossier menages for tribers isntance named spiders"
license = "MIT OR Apache-2.0"

[dependencies]
tribers = { version = "0" }

spiders-scheme = { version = "0", path = "../../pieces/spiders-scheme" }

anyhow = "1"
thiserror = "1"

futures = { version = "0.3" }
futures-util = { version = "0.3" }
async-trait = { version = "0.1" }

tokio = { version = "1", features = ["full"] }
console = { version = "0.15" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.4", features = ["metrics"] }
opentelemetry-appender-log = { version = "0.4", default-features = false }
opentelemetry-prometheus = { version = "0.16" }
prometheus = { version = "0.13" }

log = { version = "0.4" }

clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1" }
serde_json = { version = "1.0" }

http = { version = "1.0"}
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["add-extension"] }
axum = { version = "0.7" }
axum-login = { version = "0.15" }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = { version = "0.4" }

nusb = { version = "0.1" }

sqlx = { version = "0.7", features = ["sqlite", "time", "runtime-tokio"] }
sea-orm = { version = "0.12" }

udev = { version = "0.7" }
tokio-udev = { version = "0.9" }

serialport = { version = "4" }
tokio-serial = { version = "5" }

rumqttc = { version = "0.24" }

tonic = { version = "0.11" }
prost = { version = "0.12" }
prost-types = { version = "0.12" }

[build-dependencies]
tonic-build = { version = "0.11" }
prost-build = { version = "0.12" }
